--- a/work/index.html
+++ b/work/index.html
@@ -11,7 +11,7 @@
     <!-- MY STYLE -->
     <link rel="stylesheet" href="css/style.css">
     <!-- JS -->
-    <script src="js/script.js" defer></script>
+    
     <title>Gallery</title>
 </head>
 <body>
@@ -32,6 +32,6 @@
             </div>
             <i class="bi fa-regular fa-circle-right" id="next"></i>
         </div>
-   
+        <script src="js/main.js"></script>
 </body>
 </html>
